se agreaga un boton con estilos

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="./js/main.js"></script>
     <link rel="stylesheet" href="./styles/index.css"></link>
+    <link rel="stylesheet" href="./styles/btn.css"></link>
+
   </head>
   <body ng-controller="comics">
     <nav class="navbar navbar-dark bg-dark">
@@ -40,7 +42,7 @@
                 <p class="card-text ">{{item.description}}</p>
 
                 </div>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary"><span>go somewhere</span></a>
                 
               </div>
             </div>
