--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
   <body ng-controller="comics">
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand">Navbar</a>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
        
     </nav>
    
@@ -69,7 +73,7 @@
                 <p class="card-text ">{{item.description}}</p>
 
                 </div>
-                <a href="#" class="btn btn-primary"><span>go somewhere</span></a>
+                <a href="#" class="btn1 btn-primary">go somewhere</a>
                 
               </div>
             </div>
